--- a/package.json
+++ b/package.json
@@ -15,9 +15,19 @@
     "format:prettier": "yarn lint:prettier --write"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.18",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "framer-motion": "^11.2.6",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.2.1",
+    "styled-components": "^6.1.11",
+    "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
     "@tsconfig/strictest": "^2.0.5",
@@ -29,7 +39,6 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8",
     "prettier": "^3.2.5",
-    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
