--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-transition-group": "^4.4.5",
     "styled-components": "^6.1.11",
     "tailwindcss": "^3.4.3"
   },
