--- a/package.json
+++ b/package.json
@@ -22,24 +22,24 @@
     "@mui/material": "^5.15.18",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "framer-motion": "^11.2.6",
+    "js-cookie": "^3.0.5",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-transition-group": "^4.4.5",
-    "styled-components": "^6.1.11",
-    "tailwindcss": "^3.4.3"
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@tsconfig/strictest": "^2.0.5",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8",
     "prettier": "^3.2.5",
     "typescript": "^5"
   }
