--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 GOOGLE_CLIENT_ID="119933099800-nu4mt54h6858ctauo1tk1ioq1pukdjd1.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET="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"
-NEXTAUTH_URL="https://omo.ktrnds.com"
+NEXTAUTH_URL="http://omo.ktrnds.com/"
 NEXTAUTH_SECRET="8coMOgcZr4iBnIdXtmRgfYdUa6rLUyCXxp2M/q4h6UA="
