--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.18",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "cors": "^2.8.5",
     "framer-motion": "^11.2.6",
     "js-cookie": "^3.0.5",
     "next": "14.2.3",
@@ -29,6 +30,8 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-transition-group": "^4.4.5",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
