フォーマット

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ GOOGLE_CLIENT_ID="119933099800-nu4mt54h6858ctauo1tk1ioq1pukdjd1.apps.googleuserc
 GOOGLE_CLIENT_SECRET="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"
 NEXTAUTH_URL="http://omo.ktrnds.com/"
 NEXTAUTH_SECRET="8coMOgcZr4iBnIdXtmRgfYdUa6rLUyCXxp2M/q4h6UA="
+DATABASE_CONNECTION_STRING="mongodb+srv://Harukoto:b9F6lKa7mBWsaJtu@haru.0sj94wq.mongodb.net/Owa_Mobile_Order"
