--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "framer-motion": "^11.2.6",
     "js-cookie": "^3.0.5",
+    "mongoose": "^8.4.3",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18",
