--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@tsconfig/strictest": "^2.0.5",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
